# NeftyRT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Documentation/: 처음 만나보는 벌칸.md
MainProject/: CMakeLists.txt
MainProject/Product/: CMakeLists.txt
MainProject/Product/TeapotBasic/: TeapotBasic.cpp
MainProject/Product/Triangle/: triangle.cpp
NeftyRT/: CMakeLists.txt
NeftyRT/include/: nefty_rt.h  vulkan_utility.h
NeftyRT/src/: Context.cpp  debug.cpp
NeftyRT/src/native/: CMakeLists.txt  Generalizer.cpp  TestNative.cpp  native.h  win32window.cpp  win32window.h
NeftyRendererVK/: CMakeLists.txt  Context.cpp  NeftyRendererVK.h  RenderingSubject.cpp  RenderingUnit.cpp  nefty_rt.h
include/: RayTracingBasicShaders.h  extra_utility.h  nefty_rt.h  vulkan_utility.h
shader_cash/: GraphicsBasicFragment.frag  GraphicsBasicVertex.vert
shaders/: GraphicsBasicFragment.frag  GraphicsBasicVertex.vert
src/: ExecutablesReference.h  GraphicsBasic.cpp
